@@ -1,91 +1,89 @@
 package pe.edu.upc.center.workstation.userManagment.domain.model.aggregates;
 
-import pe.edu.upc.center.workstation.shared.domain.model.aggregates.AuditableAbstractAggregateRoot;
-
 import jakarta.persistence.*;
 import jakarta.validation.constraints.NotBlank;
-import jakarta.validation.constraints.NotNull;
-import jakarta.validation.constraints.Size;
-import lombok.Getter;
+import pe.edu.upc.center.workstation.shared.domain.model.aggregates.AuditableAbstractAggregateRoot;
 
-import java.util.*;
-
-
-
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Set;
 
 @Entity
 @Table(name = "freelancers")
 public class Freelancer extends AuditableAbstractAggregateRoot<Freelancer> {
 
-    @Getter
-    @NotNull
     @NotBlank
-    @Size(max = 20)
-    @Column(name = "user_type", length = 20, nullable = false)
+    @Column(name = "user_type", length = 40, nullable = false)
     private String userType;
 
     @ElementCollection
-    @CollectionTable(name = "freelancer_preferences",
-            joinColumns = @JoinColumn(name = "freelancer_id"))
-    @Column(name = "tag", nullable = false, length = 50)
-    private final Set<String> preferences = new LinkedHashSet<>();
-
+    @CollectionTable(name = "freelancer_preferences", joinColumns = @JoinColumn(name = "freelancer_id"))
+    @Column(name = "tag", length = 40, nullable = false)
+    private Set<String> preferences = new LinkedHashSet<>();
 
     @ElementCollection
-    @CollectionTable(name = "freelancer_favorite_spaces",
-            joinColumns = @JoinColumn(name = "freelancer_id"))
+    @CollectionTable(name = "freelancer_favorite_spaces", joinColumns = @JoinColumn(name = "freelancer_id"))
     @Column(name = "space_id", nullable = false)
-    private final Set<Long> favoriteSpaces = new LinkedHashSet<>();
-
-    public void addFavoriteSpace(long spaceId) {
-        favoriteSpaces.add(spaceId);
-    }
-
-    public void removeFavoriteSpace(long spaceId) {
-        favoriteSpaces.remove(spaceId);
-    }
-
-    public List<Long> getFavoriteSpaceIds() {
-        return List.copyOf(favoriteSpaces);
-    }
+    private Set<Long> favoriteSpaceIds = new LinkedHashSet<>();
 
     protected Freelancer() { }
 
     public Freelancer(String userType) {
-        this.userType = normalizeRequired(userType);
+        setUserType(userType);
+    }
+
+    public void updateUserType(String userType) {
+        setUserType(userType);
     }
 
     public void addPreference(String tag) {
-        String t = normalize(tag);
-        if (t.isEmpty()) throw new IllegalArgumentException("Preference required");
-        preferences.add(t);
+        preferences.add(normalizeTag(tag));
     }
 
     public void removePreference(String tag) {
-        preferences.remove(normalize(tag));
+        preferences.remove(normalizeTag(tag));
+    }
+
+    public void addFavoriteSpace(Long spaceId) {
+        validateSpaceId(spaceId);
+        favoriteSpaceIds.add(spaceId);
+    }
+
+    public void removeFavoriteSpace(Long spaceId) {
+        validateSpaceId(spaceId);
+        favoriteSpaceIds.remove(spaceId);
     }
 
 
+    public String getUserType() {
+        return userType;
+    }
 
     public List<String> getPreferences() {
-        return List.copyOf(preferences);
+        return Collections.unmodifiableList(new ArrayList<>(preferences));
+    }
+
+    public List<Long> getFavoriteSpaceIds() {
+        return Collections.unmodifiableList(new ArrayList<>(favoriteSpaceIds));
     }
 
 
-
-    public void updateUserType(String newUserType) {
-        String value = normalizeRequired(newUserType);
-        if (value.length() > 20) throw new IllegalArgumentException("userType max length is 20");
-        if (!value.equals(this.userType)) this.userType = value;
+    private void setUserType(String userType) {
+        if (userType == null || userType.isBlank())
+            throw new IllegalArgumentException("userType must not be blank");
+        this.userType = userType.trim();
     }
 
-    private static String normalize(String s) {
-        return s == null ? "" : s.trim().toLowerCase();
+    private String normalizeTag(String tag) {
+        if (tag == null || tag.isBlank())
+            throw new IllegalArgumentException("tag must not be blank");
+        return tag.trim().toLowerCase();
     }
 
-    private static String normalizeRequired(String s) {
-        String v = s == null ? "" : s.trim();
-        if (v.isEmpty()) throw new IllegalArgumentException("userType is required");
-        return v;
+    private void validateSpaceId(Long spaceId) {
+        if (spaceId == null || spaceId <= 0)
+            throw new IllegalArgumentException("spaceId must be > 0");
     }
 }
